# lerobot-spot

./: .gitignore  CLAUDE.md  README.md  debug_frames.py  demo_spot.py  list_spot_images.py  spot_keyboard_record.py  spot_policy_replay.py  spot_pose_keyboard_record.py  test_spot_lerobot.py  test_spot_robot.py
lerobot_robot_spot/: __init__.py  config_spot_robot.py  pyproject.toml  spot_robot.py
lerobot_robot_spot/lerobot_robot_spot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
